Support editor content change notification, URI property and correctly align toolbar items

--- a/src/sql/parts/modelComponents/toolbarLayout.css
+++ b/src/sql/parts/modelComponents/toolbarLayout.css
@@ -16,6 +16,7 @@
 	border-bottom-width: .5px;
 	border-bottom-style: solid;
 	box-sizing: border-box;
+	align-items: center;
 	border-bottom-color: rgba(128, 128, 128, 0.35);
 }
 
